<resources>
    <string name="app_name">MazeBall</string>
    <string name="start">Start</string>
    <string name="resume">Resume</string>
    <string name="stop">Stop</string>
    <string name="settings">Settings</string>
    <string name="menu">Menu</string>
    <string name="choose_level">Choose Level</string>
    <string name="back">Back</string>
    <string name="new_level">New Level</string>
    <string name="background_color">Background color</string>
    <string name="ball_color">Ball color</string>
    <string name="green">Green</string>
    <string name="blue">Blue</string>
    <string name="red">Red</string>
    <string name="white">White</string>
    <string name="creamy">Creamy</string>
    <string name="orange">Orange</string>
</resources>
